overflow fixed

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -47,7 +47,7 @@
 body {
   font-family: var(--font-para) !important;
   background-color: rgb(234, 232, 237, 0.5) !important;
-  overflow: hidden !important;
+  /* overflow: hidden !important; */
 }
 
 
